Force HW acceleration to avoid flicker

--- a/app/assets/styl/main.styl
+++ b/app/assets/styl/main.styl
@@ -76,6 +76,7 @@ html, body
 	height: height
 
 #statusline
+	-webkit-transform: translate3d(0, 0, 0)
 	border-bottom: 1px solid rgba(#000, border-opacity + .5)
 	border-top: 1px solid rgba(#fff, border-opacity)
 	border-radius: (padding-width / 2) (padding-width / 2) 0 0
